# turbo-spaghetti

./: README.md
fluentPython/chapter_1/: Dockerfile  README.md  demo.py  ex1.py  prompt_plan.md  pyproject.toml  spec.md  todo.md
fluentPython/chapter_1/.github/workflows/: ci.yml
fluentPython/chapter_1/scripts/: security_audit.py
fluentPython/chapter_1/src/: cli.py  converter.py  optimized_converter.py  parser.py  validation.py
fluentPython/chapter_1/tests/: test_converter.py  test_optimization.py  test_parser.py  test_performance.py  test_validation.py
