[tool.poetry]
name = "rmb-converter"
version = "0.1.0"
description = "人民币数字金额转大写工具"
authors = ["JO <jo@joytrip.org>"]

[tool.poetry.dependencies]
python = "^3.8"
decimal = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 